# hello_cg

./: CMakeLists.txt  CMakePresets.json  hello_cg.cpp  readme.md
0_test/: CMakeLists.txt  thunks_test.cc
1_show_rect/: CMakeLists.txt  hello_rect.cpp
2_bounce_animation/: CMakeLists.txt  hello_animation.cpp  hello_animation.h
include/common/: thunks.hpp
